--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,6 +46,7 @@ jobs:
 
   build-publish:
     runs-on: ubuntu-latest
+    needs: test
     outputs:
       docker_image_digest: ${{ steps.docker_push.outputs.digest }}
       new_release_published: ${{ steps.semantic.outputs.new_release_published }}
@@ -113,8 +114,7 @@ jobs:
 
   deploy-dev-mainnet:
     runs-on: ubuntu-latest
-    needs:
-      - build-publish
+    needs: build-publish
     if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
     env:
       DEPLOY_ENV: dev
@@ -141,8 +141,7 @@ jobs:
 
   deploy-dev-testnet:
     runs-on: ubuntu-latest
-    needs:
-      - build-publish
+    needs: build-publish
     if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
     env:
       DEPLOY_ENV: dev
@@ -170,8 +169,7 @@ jobs:
   auto-approve-dev:
     runs-on: ubuntu-latest
     if: needs.build-publish.outputs.new_release_published == 'true' && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository)
-    needs:
-      - build-publish
+    needs: build-publish
     steps:
       - name: Approve pending deployments
         run: |
