--- a/components/chainhook-cli/Cargo.toml
+++ b/components/chainhook-cli/Cargo.toml
@@ -24,7 +24,12 @@ clap = { version = "3.2.23", features = ["derive"], optional = true }
 clap_generate = { version = "3.0.3", optional = true }
 toml = { version = "0.5.6", features = ["preserve_order"], optional = true }
 ctrlc = { version = "3.2.2", optional = true }
-reqwest = { version = "0.11", features = ["stream", "json"] }
+reqwest = { version = "0.11", default-features = false, features = [
+    "blocking",
+    "stream",
+    "json",
+    "rustls-tls",
+] }
 tokio = { version = "=1.24", features = ["full"] }
 futures-util = "0.3.24"
 flate2 = "1.0.24"
