--- a/components/chainhook-sdk/Cargo.toml
+++ b/components/chainhook-sdk/Cargo.toml
@@ -14,7 +14,7 @@ serde-hex = "0.1.0"
 serde_derive = "1"
 stacks-rpc-client = "1.0.10"
 clarinet-utils = "1.0.0"
-hiro-system-kit = "0.3.1"
+hiro-system-kit = { version = "0.3.1", default-features = false, optional = true }
 # stacks-rpc-client = { version = "1", path = "../../../clarinet/components/stacks-rpc-client" }
 # clarinet-utils = { version = "1", path = "../../../clarinet/components/clarinet-utils" }
 # hiro-system-kit = { version = "0.1.0", path = "../../../clarinet/components/hiro-system-kit" }
@@ -50,6 +50,8 @@ test-case = "3.1.0"
 "jsonrpc:0.13.0" = { git = 'https://github.com/apoelstra/rust-jsonrpc', rev = "1063671f122a8985c1b7c29030071253da515839" }
 
 [features]
-default = ["log"]
+default = ["hiro-system-kit/log"]
 zeromq = ["zmq"]
-log = ["hiro-system-kit/log"]
+debug = ["hiro-system-kit/debug"]
+release = ["hiro-system-kit/release"]
+
