--- a/components/chainhook-sdk/Cargo.toml
+++ b/components/chainhook-sdk/Cargo.toml
@@ -14,7 +14,7 @@ serde-hex = "0.1.0"
 serde_derive = "1"
 stacks-rpc-client = "1.0.10"
 clarinet-utils = "1.0.0"
-hiro-system-kit = { version = "0.3.1", default-features = false, optional = true }
+hiro-system-kit = { version = "0.3.1", optional = true }
 # stacks-rpc-client = { version = "1", path = "../../../clarinet/components/stacks-rpc-client" }
 # clarinet-utils = { version = "1", path = "../../../clarinet/components/clarinet-utils" }
 # hiro-system-kit = { version = "0.1.0", path = "../../../clarinet/components/hiro-system-kit" }
