--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,6 +41,11 @@ jobs:
           rustup update
           RUST_BACKTRACE=1 cargo test --all --features redis_tests -- --test-threads=1
 
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
   build-publish:
     runs-on: ubuntu-latest
     needs: test
