--- a/components/chainhook-sdk/Cargo.toml
+++ b/components/chainhook-sdk/Cargo.toml
@@ -12,10 +12,11 @@ serde = { version = "1", features = ["rc"] }
 serde_json = { version = "1", features = ["arbitrary_precision"] }
 serde-hex = "0.1.0"
 serde_derive = "1"
-stacks-rpc-client = "2"
+stacks-rpc-client = { version = "2", git = "https://github.com/hirosystems/clarinet.git", branch = "chore/upgrade-clarity-vm" }
+# stacks-rpc-client = "2"
+# stacks-rpc-client = { version = "1", path = "../../../clarinet/components/stacks-rpc-client" }
 clarinet-utils = "1.0.0"
 hiro-system-kit = { version = "0.3.1", optional = true }
-# stacks-rpc-client = { version = "1", path = "../../../clarinet/components/stacks-rpc-client" }
 # clarinet-utils = { version = "1", path = "../../../clarinet/components/clarinet-utils" }
 # hiro-system-kit = { version = "0.1.0", path = "../../../clarinet/components/hiro-system-kit" }
 chainhook-types = { version = "1.2.0", path = "../chainhook-types-rs" }
