--- a/components/chainhook-sdk/Cargo.toml
+++ b/components/chainhook-sdk/Cargo.toml
@@ -41,6 +41,7 @@ fxhash = "0.2.1"
 lazy_static = "1.4.0"
 regex = "1.9.3"
 miniscript = "11.0.0"
+prometheus = "0.13.3"
 
 [dev-dependencies]
 test-case = "3.1.0"
