--- a/.cargo/config
+++ b/.cargo/config
@@ -1,2 +1,2 @@
 [alias]
-chainhook-install = "install --path components/chainhook-cli --locked --force"
+chainhook-install = "install --path components/chainhook-cli --locked --force --features cli --features debug --no-default-features"
