--- a/components/chainhook-sdk/Cargo.toml
+++ b/components/chainhook-sdk/Cargo.toml
@@ -13,7 +13,7 @@ serde_json = { version = "1", features = ["arbitrary_precision"] }
 serde-hex = "0.1.0"
 serde_derive = "1"
 stacks-rpc-client = "2"
-hiro-system-kit = { version = "0.1.0", optional = true, rev="a36f22c1ac7f836b48da621c1ecea1ffa64c31be", git = "https://github.com/hirosystems/clarinet.git" }
+hiro-system-kit = { version = "0.1.0", optional = true, rev="59209a6d5667c2640bafbe326dcae313070007cd", git = "https://github.com/hirosystems/clarinet.git" }
 # stacks-rpc-client = { version = "1", path = "../../../clarinet/components/stacks-rpc-client" }
 # hiro-system-kit = { version = "0.1.0", path = "../../../clarinet/components/hiro-system-kit" }
 chainhook-types = { version = "1.3.3", path = "../chainhook-types-rs" }
@@ -50,4 +50,4 @@ test-case = "3.1.0"
 default = ["hiro-system-kit/log"]
 zeromq = ["zmq"]
 debug = ["hiro-system-kit/debug"]
-release = ["hiro-system-kit/release_debug"]
+release = ["hiro-system-kit/release_debug", "hiro-system-kit/full_level_prefix"]
