--- a/components/chainhook-sdk/Cargo.toml
+++ b/components/chainhook-sdk/Cargo.toml
@@ -13,7 +13,7 @@ serde_json = { version = "1", features = ["arbitrary_precision"] }
 serde-hex = "0.1.0"
 serde_derive = "1"
 stacks-rpc-client = "2"
-hiro-system-kit = { version = "0.3.1", optional = true }
+hiro-system-kit = { version = "0.3.2", optional = true }
 # stacks-rpc-client = { version = "1", path = "../../../clarinet/components/stacks-rpc-client" }
 # hiro-system-kit = { version = "0.1.0", path = "../../../clarinet/components/hiro-system-kit" }
 chainhook-types = { version = "1.3.3", path = "../chainhook-types-rs" }
@@ -26,7 +26,7 @@ reqwest = { version = "0.11", default-features = false, features = [
     "json",
     "rustls-tls",
 ] }
-tokio = { version = "1.24", features = ["full"] }
+tokio = { version = "1.35.1", features = ["full"] }
 base58 = "0.2.0"
 schemars = { version = "0.8.10", git = "https://github.com/hirosystems/schemars.git", branch = "feat-chainhook-fixes" }
 crossbeam-channel = "0.5.6"
@@ -50,4 +50,4 @@ test-case = "3.1.0"
 default = ["hiro-system-kit/log"]
 zeromq = ["zmq"]
 debug = ["hiro-system-kit/debug"]
-release = ["hiro-system-kit/debug"]
+release = ["hiro-system-kit/release_debug", "hiro-system-kit/full_log_level_prefix"]
