--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ members = [
 default-members = ["components/chainhook-cli", "components/chainhook-sdk"]
 resolver = "2"
 
-[replace]
-"jsonrpc:0.13.0" = { git = 'https://github.com/apoelstra/rust-jsonrpc', rev = "1063671f122a8985c1b7c29030071253da515839" }
+# [patch.'https://github.com/hirosystems/clarinet.git']
+# stacks-codec = { path = "../clarinet/components/stacks-codec" }
