--- a/components/chainhook-sdk/Cargo.toml
+++ b/components/chainhook-sdk/Cargo.toml
@@ -12,10 +12,9 @@ serde = { version = "1", features = ["rc"] }
 serde_json = { version = "1", features = ["arbitrary_precision"] }
 serde-hex = "0.1.0"
 serde_derive = "1"
-stacks-rpc-client = { version = "2", git = "https://github.com/hirosystems/clarinet.git" }
-hiro-system-kit = { version = "0.3.4", optional = true }
-# stacks-rpc-client = { version = "1", path = "../../../clarinet/components/stacks-rpc-client" }
+stacks-codec = { git = "https://github.com/hirosystems/clarinet.git", branch = "feat/stacks-codec" }
 # hiro-system-kit = { version = "0.1.0", path = "../../../clarinet/components/hiro-system-kit" }
+hiro-system-kit = { version = "0.3.1", optional = true }
 chainhook-types = { version = "1.3.3", path = "../chainhook-types-rs" }
 rocket = { version = "=0.5.0-rc.3", features = ["json"] }
 bitcoincore-rpc = "0.18.0"
