--- a/components/chainhook-sdk/Cargo.toml
+++ b/components/chainhook-sdk/Cargo.toml
@@ -16,7 +16,7 @@ stacks-codec = "2.4.1"
 # hiro-system-kit = { version = "0.1.0", path = "../../../clarinet/components/hiro-system-kit" }
 hiro-system-kit = { version = "0.3.4", optional = true }
 chainhook-types = { version = "1.3.6", path = "../chainhook-types-rs" }
-rocket = { version = "=0.5.0-rc.3", features = ["json"] }
+rocket = { version = "=0.5.0", features = ["json"] }
 bitcoincore-rpc = "0.18.0"
 bitcoincore-rpc-json = "0.18.0"
 base64 = "0.21.5"
@@ -27,7 +27,7 @@ reqwest = { version = "0.11", default-features = false, features = [
 ] }
 tokio = { version = "1.35.1", features = ["full"] }
 base58 = "0.2.0"
-schemars = { version = "0.8.10", git = "https://github.com/hirosystems/schemars.git", branch = "feat-chainhook-fixes" }
+schemars = { version = "0.8.16", git = "https://github.com/hirosystems/schemars.git", branch = "feat-chainhook-fixes" }
 crossbeam-channel = "0.5.6"
 futures = "0.3.21"
 hyper = { version = "=0.14.27", features = ["http1", "client"] }
