--- a/.github/workflows/pkg-version-bump.yaml
+++ b/.github/workflows/pkg-version-bump.yaml
@@ -1,5 +1,5 @@
 ##
-## Bumps the Clarinet version listed on various package managers.
+## Bumps the Chainhook version listed on various package managers.
 ##
 
 name: Package Version Bump
@@ -57,8 +57,8 @@ jobs:
   
           # Update manifest and submit PR
           ./wingetcreate.exe update `
-            --urls https://github.com/${{ github.repository }}/releases/download/${env:TAG}/clarinet-windows-x64.msi `
+            --urls https://github.com/${{ github.repository }}/releases/download/${env:TAG}/chainhook-windows-x64.msi `
             --version ${VERSION} `
             --token ${{ secrets.GH_TOKEN }} `
             --submit `
-            HiroSystems.Clarinet
+            HiroSystems.Chainhook
