--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -233,7 +233,7 @@ jobs:
 
       - name: Build Installer (Windows)
         if: matrix.os == 'windows-latest'
-        run: cargo wix -v --no-build --nocapture -p chainhook-cli
+        run: cargo wix -v --no-build --nocapture -p chainhook
 
       - name: Code sign installed (Windows)
         if: startsWith(github.ref, 'refs/heads/main') && matrix.os == 'windows-latest'
