try explicitly adding rust toolchain

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -126,6 +126,9 @@ jobs:
 
       - name: Install Rust toolchain
         run: rustup toolchain install stable --profile minimal --target ${{ matrix.target }}
+      
+      - name: Add Rust Toolchain Target
+        run: rustup toolchain add ${{ matrix.target }}
 
       - name: "Get Rust version (unix)"
         if: matrix.os != 'windows-latest'
