chore: update sacks-codec dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ members = [
 default-members = ["components/chainhook-cli", "components/chainhook-sdk"]
 resolver = "2"
 
-# [patch.'https://github.com/hirosystems/clarinet.git']
+[patch.crates-io]
+stacks-codec = { git = "https://github.com/hirosystems/clarinet.git" }
 # stacks-codec = { path = "../clarinet/components/stacks-codec" }
