--- a/components/chainhook-sdk/Cargo.toml
+++ b/components/chainhook-sdk/Cargo.toml
@@ -14,7 +14,6 @@ serde-hex = "0.1.0"
 serde_derive = "1"
 stacks-codec = "2.4.1"
 hiro-system-kit = { version = "0.3.4", optional = true }
-chainhook-types = { version = "1.3.6", path = "../chainhook-types-rs" }
 rocket = { version = "=0.5.0", features = ["json"] }
 bitcoincore-rpc = "0.18.0"
 bitcoincore-rpc-json = "0.18.0"
@@ -40,6 +39,8 @@ lazy_static = "1.4.0"
 regex = "1.9.3"
 miniscript = "11.0.0"
 prometheus = "0.13.3"
+
+chainhook-types = { path = "../chainhook-types-rs" }
 
 [dev-dependencies]
 test-case = "3.1.0"
