--- a/components/chainhook-cli/Cargo.toml
+++ b/components/chainhook-cli/Cargo.toml
@@ -42,6 +42,9 @@ uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }
 threadpool = "1.8.1"
 rocket_okapi = { version = "0.8.0", git = "https://github.com/hirosystems/okapi.git", branch = "feat-chainhook-fixes" }
 rocket = { version = "=0.5.0", features = ["json"] }
+bitcoin-scanner = { version = "0.1.0", git = "https://github.com/MicaiahReid/bitcoin-scanner.git", branch="update-bitcoin-dep"}
+# bitcoin-scanner = { version = "0.1.0", path = "../../../bitcoin-scanner"}
+bitcoin = "0.31.2"
 
 [dependencies.rocksdb]
 version = "0.20.1"
@@ -61,6 +64,7 @@ default = ["cli", "debug"]
 cli = ["clap", "clap_generate", "toml", "ctrlc"]
 debug = ["chainhook-sdk/debug"]
 release = ["chainhook-sdk/release"]
+quiet = ["chainhook-sdk/quiet"]
 redis_tests = []
 
 # [patch.crates-io]
