use stacks feature to remove stacks-specific fields from config

--- a/components/chainhook-cli/Cargo.toml
+++ b/components/chainhook-cli/Cargo.toml
@@ -57,7 +57,7 @@ serial_test = "2.0.0"
 
 
 [features]
-default = ["cli", "debug"]
+default = ["cli", "debug", "chainhook-sdk/stacks"]
 cli = ["clap", "clap_generate", "toml", "ctrlc"]
 debug = ["chainhook-sdk/debug"]
 release = ["chainhook-sdk/release"]
