--- a/.github/workflows/pkg-version-bump.yaml
+++ b/.github/workflows/pkg-version-bump.yaml
@@ -1,5 +1,5 @@
 ##
-## Bumps the Clarinet version listed on various package managers.
+## Bumps the Chainhook version listed on various package managers.
 ##
 
 name: Package Version Bump
@@ -27,6 +27,10 @@ jobs:
           HOMEBREW_GITHUB_API_TOKEN: ${{ secrets.GH_TOKEN }}
           TAG: ${{ github.event.client_payload.tag || github.event.inputs.tag }}
         run: |
+          # Get version info
+          VERSION=$(echo "${ENV#v}")
+
+          # Configure git configs
           git config --global user.name "${GIT_USER_NAME}"
           git config --global user.email "${GIT_USER_EMAIL}"
 
@@ -34,7 +38,7 @@ jobs:
           brew bump-formula-pr \
             --no-browse \
             --no-audit \
-            --tag "${TAG}" \
+            --version "${VERSION}" \
             ${{ github.event.repository.name }}
 
   winget:
@@ -45,8 +49,8 @@ jobs:
         env:
           TAG: ${{ github.event.client_payload.tag || github.event.inputs.tag }}
         run: |
-          # Get version infoq
-          $VERSION=${env:TAG}.substring(1)
+          # Get version info
+          VERSION=$(echo "${TAG#v}")
 
           # Configure git configs
           git config --global user.name "${env:GIT_USER_NAME}"
@@ -57,8 +61,8 @@ jobs:
   
           # Update manifest and submit PR
           ./wingetcreate.exe update `
-            --urls https://github.com/${{ github.repository }}/releases/download/${env:TAG}/clarinet-windows-x64.msi `
+            --urls https://github.com/${{ github.repository }}/releases/download/${env:TAG}/chainhook-windows-x64.msi `
             --version ${VERSION} `
             --token ${{ secrets.GH_TOKEN }} `
             --submit `
-            HiroSystems.Clarinet
+            HiroSystems.Chainhook
